--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -198,7 +198,6 @@ ul.navigation li a {
     padding: 20px;
 }
 
-
 /* Login */
 
 button {
@@ -210,6 +209,7 @@ button {
     font-size: 16px;
     font-family: 'Raleway', sans-serif;
     margin: 4px 2px;
+    cursor: pointer;
 }
 
 .right {
