updated budgeting.tsx and style.css
Revamped the budgeting tool by adding additional features, dynamic table, typescript form, delete row button, tracking expenses and savings

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -276,3 +276,17 @@ ul.navigation li a:hover {
 .content li {
     margin-bottom: 10px;
 }
+/* budgeting table */
+.budgetTable {
+    width: 75%; 
+    border-collapse: collapse; 
+}
+.budgetTable th,
+.budgetTable td {
+    padding: 12px 15px;
+} 
+.budgetTable thead tr {
+    text-align: left;
+    background-color: #2497CA;
+    color: #ffffff;
+} 
