--- a/src/styles/habittracker.css
+++ b/src/styles/habittracker.css
@@ -32,12 +32,11 @@
 .sidebar {
     height: 100%;
     width: 250px;
-    position: fixed;
     top: 0;
     left: 0;
     background-color: rgb(215, 215, 229);
     padding-top: 20px;
-    margin-top: 260px;
+    margin: -20px;
 }
 
 .sidebar ul {
@@ -118,7 +117,5 @@
     padding: 20px;
     font-style:italic;
     margin-left: 400px;
-    margin-top: 200px;
     color:rgb(93,0,139)
-    
 }
