--- a/src/svr/physical_fitness/css_files/begcalis.css
+++ b/src/svr/physical_fitness/css_files/begcalis.css
@@ -1,11 +1,6 @@
-body {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    color: #444;
-    background-color: #000;
-  }
 
-  h1 {
+
+  .BeginnerCalisthenicsContainer h1 {
     font-size: 2.5rem;
     font-weight: bold;
     margin-bottom: 20px;
@@ -17,7 +12,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
 
-  .container {
+  .BeginnerCalisthenicsContainer {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
