--- a/src/svr/physical_fitness/css_files/physical_fitness_blog.css
+++ b/src/svr/physical_fitness/css_files/physical_fitness_blog.css
@@ -1,19 +1,19 @@
-.blog h3 {
+.physicalFitnessBlog h3 {
     box-shadow: 3px 3px gray;
     margin: 25px 50px;
 }
 
-.blog_container {
+.physicalFitnessBlog .blog_container {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     margin: 0;
     flex-direction: row;
-    /* Ensure flex direction is row */
+   
 }
 
-.sportscard {
+.physicalFitnessBlog .sportscard {
     display: flex;
     flex-direction: column;
     width: clamp(20rem, calc(20rem + 2vw), 22rem);
@@ -27,7 +27,7 @@
     height: 570px;
 }
 
-.card__body {
+.sportscard .card__body {
     padding: 1rem;
     display: flex;
     flex-direction: column;
@@ -66,12 +66,13 @@ img {
     width: 80px;
 }
 
-.card__body h4 {
+.sportscard .card__body h4 {
     font-size: 1.5rem;
     text-transform: capitalize;
 }
 
-.div2 {
+
+.healthCard{
     display: grid;
     grid-template-columns: 270px 430px;
     justify-content: center;
@@ -97,7 +98,7 @@ img {
     margin: 7px;
 }
 
-.content {
+.hiddenComponentcontentnt {
     width: auto;
     height: auto;
 }
@@ -106,6 +107,3 @@ img {
     text-align: right;
 }
 
-h1 {
-    display: block;
-}
